[package]
name = "incremental"
version = "0.1.0"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["incremental-macros"]

[features]
rust-analyzer = []

[dependencies]
im-rc = { version = "15.1.0", optional = true }
refl = "0.2.1"
serde = { version = "1.0.125", features = ["derive"] }
slotmap = { version = "1.0.6", optional = true }
smallvec = "1.10.0"
tracing = { version = "0.1.37", features = [ ] }

[dev-dependencies]
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "ansi", "env-filter", "smallvec", "tracing-log"] }
criterion = { version = "0.4.0", features = [ "html_reports" ] }
rand = "0.8.5"
tracing = { version = "0.1.37", features = [ "release_max_level_off" ]}

[profile.release]
lto = "thin"

[[bench]]
name = "linear"
harness = false

[[bench]]
name = "shares_per_symbol"
harness = false
