[package]
name = "incremental"
version = "0.1.1"
authors = ["Cormac Relf <web@cormacrelf.net>"]
edition = "2021"
description = "incremental computations, based on Jane Street's incremental"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["incremental-macros", "incremental-map"]

[workspace.dependencies]
test-log = { version = "0.2.11", default-features = false, features = [
  "trace",
] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
  "fmt",
  "ansi",
  "env-filter",
  "smallvec",
  "tracing-log",
] }
criterion = { version = "0.4.0", features = ["html_reports"] }
tracing = { version = "0.1.37", features = ["release_max_level_off"] }
im-rc = { version = "15.1.0" }

[features]
rust-analyzer = []

[dependencies]
refl = "0.2.1"
smallvec = "1.10.0"
tracing = { version = "0.1.37", features = [] }
slotmap = { version = "1.0.6", optional = true }
im-rc = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
criterion = { workspace = true }
test-log = { workspace = true }
incremental-map = { path = "incremental-map", features = ["im"] }
rand = "0.8.5"
im-rc = { workspace = true }

[profile.release]
lto = "thin"

[[bench]]
name = "linear"
harness = false

[[bench]]
name = "shares_per_symbol"
harness = false
