[package]
name = "incremental-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
incremental = { path = "..", features = ["slotmap"] }
slotmap = "1.0.6"
string-interner = "0.14.0"
paste = { version = "1.0.9" }

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "ansi", "env-filter", "smallvec", "tracing-log"] }
tracing = { version = "0.1.37", features = [ "release_max_level_off" ]}

