[package]
name = "incremental-macros"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["string-interner"]

[dependencies]
incremental = { path = "..", features = ["slotmap"] }
slotmap = "1.0.6"
string-interner = { version = "0.14.0", optional = true }
paste = { version = "1.0.9" }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
