[package]
name = "incremental-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
im = ["dep:im-rc"]

[dependencies]
im-rc = { workspace = true, optional = true }
incremental = { path = ".." }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
criterion = { workspace = true }
test-log = { workspace = true }
